# oceanbase-plugins

./: .gitignore  CMakeLists.txt  README.md
cmake/: Pack.cmake
common/liboceanbase_jni_common/: CMakeLists.txt  README.en-US.md  README.zh-CN.md  jni_manager.cpp  jni_manager.h
external_table/: README.md  pom.xml
external_table/api/: pom.xml
external_table/internal/: pom.xml
external_table/internal/src/main/resources/: logback.xml
external_table/plugin/adbc/: pom.xml
external_table/plugin/jdbc/: pom.xml
external_table/plugin/jdbc/src/main/java/org/apache/arrow/adapter/jdbc/: ArrowVectorIterator.java  JdbcToArrowConfig.java
external_table/plugin/jdbc/src/main/java/org/apache/arrow/adapter/jdbc/consumer/: CompositeJdbcConsumer.java
external_table/plugin/jdbc/src/main/java/org/apache/arrow/adbc/driver/jdbc/: ObjectMetadataBuilder.java
external_table/plugin/mysql/: pom.xml
external_table/plugin/odps/: pom.xml
external_table/plugin/sqlserver/: pom.xml
japanese_ftparser/: CMakeLists.txt  README.en-US.md  README.ja-JP.md  README.ja.md  README.zh-CN.md  README_CN.md  README_JA.md  ftparser_main.cpp  japanese_ftparser_main.cpp  japanese_jni_bridge.cpp  japanese_jni_bridge.h  jni_bridge.cpp  jni_bridge.h  parser_core.cpp  parser_core.h
japanese_ftparser/java/: JapaneseSegmenter.java
jieba_ftparser/: CMakeLists.txt  README.md  ob_jieba_ftparser.cpp  resources.cpp.in
jieba_ftparser/cppjieba/: CMakeLists.txt
jieba_ftparser/cppjieba/include/cppjieba/: DictTrie.hpp  FullSegment.hpp  HMMModel.hpp  HMMSegment.hpp  Jieba.hpp  KeywordExtractor.hpp  MPSegment.hpp  MixSegment.hpp  PosTagger.hpp  PreFilter.hpp  QuerySegment.hpp  SegmentBase.hpp  SegmentTagged.hpp  TextRankExtractor.hpp  Trie.hpp  Unicode.hpp
korean_ftparser/: CMakeLists.txt  README.en-US.md  README.ko-KR.md  README.zh-CN.md  korean_ftparser_main.cpp  korean_jni_bridge.cpp  korean_jni_bridge.h
korean_ftparser/java/: KoreanSegmenter.java
thai_ftparser/: CMakeLists.txt  README.en-US.md  README.th-TH.md  README.zh-CN.md  README_CN.md  README_TH.md  thai_ftparser_main.cpp  thai_jni_bridge.cpp  thai_jni_bridge.h  thai_parser_core.cpp  thai_parser_core.h
thai_ftparser/java/: RealThaiSegmenter.java  ThaiSegmenter.java
