cmake_minimum_required(VERSION 3.10)
project(oceanbase_jni_common LANGUAGES CXX)

# Find JNI
FIND_PACKAGE(JNI REQUIRED COMPONENTS JVM)

# Add library
ADD_LIBRARY(${PROJECT_NAME} SHARED jni_manager.cpp)

# Include directories
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:.>
    ${JNI_INCLUDE_DIRS}
)

# Link JNI
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${JNI_LIBRARIES})

# Set C++ standard
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES 
    CXX_STANDARD 11 
    CXX_STANDARD_REQUIRED ON
    CXX_VISIBILITY_PRESET default
)

# Install
install(FILES jni_manager.h DESTINATION include)
install(TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    RUNTIME DESTINATION bin
)

